2010-04-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add configure script checks for prerequisite library headers.
	(Thanks to Cesar Strauss for proposing a rudimentary implementation).

	* aclocal.m4: New file; it does no more than include...
	* m4/missing.m4: ...this; new file incorporated from build-aux module.

	* configure.ac: Add AC_CHECK_HEADER assertions for...
	(zlib.h, bzlib.h, lzma.h): ...these; invoke MINGW_AC_ASSERT_MISSING in
	respect of each failing assertion.

2010-04-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Case-insensitive subsystem name matching revisited.

	* src/pkgfind.cpp (pkgXmlDocument::FindPackageByName): Use...
	(subsystem_strcmp): ...this to match subsystem names, instead of...
	(match_if_explicit): ...this.

2010-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Enable recursive processing of repository package lists.

	* src/pkgbase.h (pkgXmlDocument::SyncRepository): Make it public.

	* src/pkgbind.cpp (pkgRepository): New locally defined and implemented
	class; it facilitates recursive loading and parsing of package lists,
	replacing much of the original non-recursive functionality within...
	(pkgXmlDocument::BindRepositories): ...this; use it.

2010-04-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement installer function; use per-package file manifests.

	* src/pkgproc.h (pkgManifest): New class; declare it.
	(pkgArchiveProcessor::origin): New protected member variable.
	(pkgArchiveProcessor::sysroot_len): New protected member variable.
	(pkgArchiveProcessor::installed): Type changed to `pkgManifest *'.
	(pkgTarArchiveInstaller::Process): Declare specialisation hook.
	(pkgTarArchiveInstaller::UpdateInstallationManifest): Disused member
	function; remove redundant declaration from class definition.
	(pkgInstall): New generalised installation function; declare it.
	(pkgRegister): New function; declare it.

	* src/pkginst.cpp: New file.